package typeTask;

public class Epic extends Task {
    public Epic(String name, int id, StatusTask status) {
        super(name, id, status);
    }
}
